--- a/index.html
+++ b/index.html
@@ -661,7 +661,6 @@ pre.rouge {
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#license">License</a></li>
 <li><a href="#contributing">Contributing</a></li>
 <li><a href="#introduction">Introduction</a>
 <ul class="sectlevel2">
@@ -724,6 +723,7 @@ pre.rouge {
 <li><a href="#_interacting_with_an_nrepl_server">Interacting with an nREPL server</a></li>
 </ul>
 </li>
+<li><a href="#license">License</a></li>
 </ul>
 </div>
 </div>
@@ -734,32 +734,10 @@ pre.rouge {
 </div>
 </div>
 <div class="sect1">
-<h2 id="license">License</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Copyright © 2020 Michiel Borkent</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<a class="image" href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="https://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
-</div>
-</div>
-<div class="paragraph">
-<p>This draft of Babashka book is licensed under a
-<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
-License</a>.</p>
-</div>
-<div class="paragraph">
-<p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
-this repository as a basis for creating your own book based on this one.</p>
-</div>
-</div>
-</div>
-<div class="sect1">
 <h2 id="contributing">Contributing</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Visit Babashka book&#8217;s Github repository and read
+<p>Visit Babashka book&#8217;s <a href="https://github.com/babashka/book">Github repository</a> and read
 <a href="https://github.com/babashka/book/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
 on how to contribute.</p>
 </div>
@@ -2676,10 +2654,32 @@ started with <code>lein repl</code>:</p>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="license">License</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Copyright © 2020 Michiel Borkent</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<a class="image" href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="https://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
+</div>
+</div>
+<div class="paragraph">
+<p>This book is licensed under a
+<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
+License</a>.</p>
+</div>
+<div class="paragraph">
+<p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
+this repository as a basis for creating your own book based on this one.</p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-28 21:11:03 +0100
+Last updated 2020-11-28 21:26:01 +0100
 </div>
 </div>
 </body>
