--- a/index.html
+++ b/index.html
@@ -699,8 +699,9 @@ pre.rouge {
 </li>
 <li><a href="#libraries">Libraries</a>
 <ul class="sectlevel2">
-<li><a href="#_built_in_namespaces">Built-in namespaces</a></li>
+<li><a href="#built-in-namespaces">Built-in namespaces</a></li>
 <li><a href="#_babashka_namespaces">Babashka namespaces</a></li>
+<li><a href="#_projects">Projects</a></li>
 </ul>
 </li>
 <li><a href="#child_processes">Child processes</a>
@@ -1838,7 +1839,7 @@ with <code>clojure</code></p>
 <h2 id="libraries">Libraries</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_built_in_namespaces">Built-in namespaces</h3>
+<h3 id="built-in-namespaces">Built-in namespaces</h3>
 <div class="paragraph">
 <p>In addition to <code>clojure.core</code>, the following namespaces are available in babashka.
 Some are available through pre-defined aliases in the <code>user</code> namespace,
@@ -2076,6 +2077,18 @@ namespace.</p>
 <p>The <code>babashka.process</code> process library. See the
 <a href="https://github.com/babashka/process">process</a> repo for API docs.</p>
 </div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_projects">Projects</h3>
+<div class="paragraph">
+<p>Babashka is able to run Clojure projects from source, if they are compatible
+with the subset of Clojure that sci is capable of running.</p>
+</div>
+<div class="paragraph">
+<p>Check this
+<a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md">page</a> for
+projects that are known to work with babashka.</p>
 </div>
 </div>
 </div>
