--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@ pre.rouge {
 <li><a href="#_projects">Projects</a></li>
 </ul>
 </li>
+<li><a href="#pods">Pods</a></li>
 <li><a href="#child_processes">Child processes</a>
 <ul class="sectlevel2">
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
@@ -2094,6 +2095,16 @@ projects that are known to work with babashka.</p>
 </div>
 </div>
 <div class="sect1">
+<h2 id="pods">Pods</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Pods are programs that can be used as a Clojure library by
+babashka. Documentation is available in the
+<a href="https://github.com/babashka/babashka.pods">library repo</a>.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="child_processes">Child processes</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -2714,7 +2725,7 @@ this repository as a basis for creating your own book based on this one.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-28 21:49:36 +0100
+Last updated 2020-11-28 22:33:31 +0100
 </div>
 </div>
 </body>
