--- a/index.html
+++ b/index.html
@@ -2101,6 +2101,10 @@ projects that are known to work with babashka.</p>
 babashka. Documentation is available in the
 <a href="https://github.com/babashka/babashka.pods">library repo</a>.</p>
 </div>
+<div class="paragraph">
+<p>A list of available pods can be found
+<a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md#pods">here</a>.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
