--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@ being executed:</p>
 <div class="sect2">
 <h3 id="_parsing_command_line_arguments"><a class="link" href="#_parsing_command_line_arguments">Parsing command line arguments</a></h3>
 <div class="paragraph">
-<p>Command-line arguments can be retrieved using <code>+*command-line-args*+</code>. If you
+<p>Command-line arguments can be retrieved using <code>*command-line-args*</code>. If you
 want to parse command line arguments, you may use the built-in
 <code>clojure.tools.cli</code> namespace:</p>
 </div>
