--- a/index.html
+++ b/index.html
@@ -684,10 +684,11 @@ pre.rouge {
     }
     body.shownav #toc {
       display: block;
-      left: 0;
+      right: 0;
       top: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 50vw;
+      height: 100%;
+      box-shadow: 0 0 5px #c8c8c8;
       padding-left: 1rem;
       position: fixed;
       background: white;
