--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ pre.rouge {
       display: block;
       right: 0;
       top: 0;
-      width: 50vw;
+      width: 280px;
       height: 100%;
       box-shadow: 0 0 5px #c8c8c8;
       padding-left: 1rem;
