--- a/src/docinfo-footer.html
+++ b/src/docinfo-footer.html
@@ -32,7 +32,7 @@
   handleTocOnResize();
 
   // responsive menu toggle
-  var $toggle_button = document.createElement('button');
+  var $toggle_button = document.createElement('label');
   var $body = document.querySelector('body');
   var menu_toggle_handler = function(e) {
     $body.classList.toggle('shownav');
