--- a/src/docinfo.html
+++ b/src/docinfo.html
@@ -22,6 +22,13 @@
       top: 1rem;
       right: 1rem;
       z-index: 1001;
+      line-height: 1;
+      font-size: .875rem;
+      border: solid 1px #999;
+      margin: 0.25rem;
+      padding: 0.25rem;
+      background-color: #f4f4f4;
+      border-radius: .125rem;
     }
     #toc {
       display: none;
@@ -31,10 +38,11 @@
     }
     body.shownav #toc {
       display: block;
-      left: 0;
+      right: 0;
       top: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 280px;
+      height: 100%;
+      box-shadow: 0 0 5px #c8c8c8;
       padding-left: 1rem;
       position: fixed;
       background: white;
