--- a/src/docinfo.html
+++ b/src/docinfo.html
@@ -19,9 +19,9 @@
     .toggle-button {
       display: block;
       position: fixed;
-      top: 1rem;
-      right: 1rem;
-      z-index: 1001;
+      top: 0;
+      right: 0;
+      z-index: 2;
       line-height: 1;
       font-size: .875rem;
       border: solid 1px #999;
