--- a/index.html
+++ b/index.html
@@ -672,9 +672,9 @@ pre.rouge {
     .toggle-button {
       display: block;
       position: fixed;
-      top: 1rem;
-      right: 1rem;
-      z-index: 1001;
+      top: 0;
+      right: 0;
+      z-index: 2;
       line-height: 1;
       font-size: .875rem;
       border: solid 1px #999;
