--- a/index.html
+++ b/index.html
@@ -2604,7 +2604,7 @@ Last updated 2020-11-30 12:31:54 +0100
   oldtoc.parentNode.replaceChild(newtoc, oldtoc);
   tocbot.init({ contentSelector: '#content',
                 headingSelector: 'h1, h2, h3, h4',
-                smoothScroll: false });
+                scrollSmooth: false });
   var handleTocOnResize = function() {
     var width = window.innerWidth
         || document.documentElement.clientWidth
@@ -2615,12 +2615,12 @@ Last updated 2020-11-30 12:31:54 +0100
                        //collapseDepth: 6,
                        //activeLinkClass: 'ignoreactive',
                        //throttleTimeout: 1000,
-                       smoothScroll: false });
+                       scrollSmooth: false });
     }
     else {
       tocbot.refresh({ contentSelector: '#content',
                        headingSelector: 'h1, h2, h3, h4',
-                       smoothScroll: false });
+                       scrollSmooth: false });
     }
   };
   window.addEventListener('resize', handleTocOnResize);
