--- a/index.html
+++ b/index.html
@@ -735,6 +735,7 @@ pre.rouge {
 <li><a href="#_current_file_path">Current file path</a></li>
 <li><a href="#_parsing_command_line_arguments">Parsing command line arguments</a></li>
 <li><a href="#_preloads">Preloads</a></li>
+<li><a href="#repl">Running a REPL</a></li>
 <li><a href="#_classpath">Classpath</a></li>
 <li><a href="#_uberscript">Uberscript</a></li>
 <li><a href="#_uberjar">Uberjar</a></li>
@@ -1265,6 +1266,224 @@ these functions in babashka:</p>
 </div>
 <div class="paragraph">
 <p>Note that <code>*input*</code> is not available in preloads.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="repl"><a class="link" href="#repl">Running a REPL</a></h3>
+<div class="paragraph">
+<p>Babashka supports running a REPL, a socket REPL and an nREPL server.</p>
+</div>
+<div class="sect3">
+<h4 id="_repl"><a class="link" href="#_repl">REPL</a></h4>
+<div class="paragraph">
+<p>To start a REPL, type:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb <span class="nt">--repl</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>To get history with up and down arrows, use <a href="https://github.com/hanslub42/rlwrap">rlwrap</a>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>rlwrap bb <span class="nt">--repl</span></code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_socket_repl"><a class="link" href="#_socket_repl">Socket REPL</a></h4>
+<div class="paragraph">
+<p>To start a socket REPL on port <code>1666</code>:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb <span class="nt">--socket-repl</span> 1666
+Babashka socket REPL started at localhost:1666</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Now you can connect with your favorite socket REPL client:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>rlwrap nc 127.0.0.1 1666
+Babashka v0.0.14 REPL.
+Use :repl/quit or :repl/exit to quit the REPL.
+Clojure rocks, Bash reaches.
+
+<span class="nv">bb</span><span class="o">=&gt;</span> <span class="o">(</span>+ 1 2 3<span class="o">)</span>
+6
+<span class="nv">bb</span><span class="o">=&gt;</span> :repl/quit
+<span class="err">$</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>The <code>--socket-repl</code> option takes options similar to the <code>clojure.server.repl</code>
+Java property option in Clojure:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">--socket-repl</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:address</span><span class="w"> </span><span class="s">"0.0.0.0"</span><span class="w"> </span><span class="no">:accept</span><span class="w"> </span><span class="n">clojure.core.server/repl</span><span class="w"> </span><span class="no">:port</span><span class="w"> </span><span class="mi">1666</span><span class="p">}</span><span class="o">'</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Editor plugins and tools known to work with a babashka socket REPL:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Emacs: <a href="https://github.com/clojure-emacs/inf-clojure">inf-clojure</a>:</p>
+<div class="paragraph">
+<p>To connect:</p>
+</div>
+<div class="paragraph">
+<p><code>M-x inf-clojure-connect &lt;RET&gt; localhost &lt;RET&gt; 1666</code></p>
+</div>
+<div class="paragraph">
+<p>Before evaluating from a Clojure buffer:</p>
+</div>
+<div class="paragraph">
+<p><code>M-x inf-clojure-minor-mode</code></p>
+</div>
+</li>
+<li>
+<p>Atom: <a href="https://github.com/mauricioszabo/atom-chlorine">Chlorine</a></p>
+</li>
+<li>
+<p>Vim: <a href="https://github.com/liquidz/vim-iced">vim-iced</a></p>
+</li>
+<li>
+<p>IntelliJ IDEA: <a href="https://cursive-ide.com/">Cursive</a></p>
+<div class="paragraph">
+<p>Note: you will have to use a workaround via
+<a href="https://github.com/mfikes/tubular">tubular</a>. For more info, look
+<a href="https://cursive-ide.com/userguide/repl.html#repl-types">here</a>.</p>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_prepl"><a class="link" href="#_prepl">pREPL</a></h4>
+<div class="paragraph">
+<p>Launching a prepl can be done as follows:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">--socket-repl</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:address</span><span class="w"> </span><span class="s">"0.0.0.0"</span><span class="w"> </span><span class="no">:accept</span><span class="w"> </span><span class="n">clojure.core.server/io-prepl</span><span class="w"> </span><span class="no">:port</span><span class="w"> </span><span class="mi">1666</span><span class="p">}</span><span class="o">'</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>or programmatically:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">bb</span><span class="w"> </span><span class="n">-e</span><span class="w"> </span><span class="o">'</span><span class="p">(</span><span class="nf">clojure.core.server/io-prepl</span><span class="p">)</span><span class="o">'</span><span class="w">
+</span><span class="p">(</span><span class="nb">+</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="mi">3</span><span class="p">)</span><span class="w">
+</span><span class="p">{</span><span class="no">:tag</span><span class="w"> </span><span class="no">:ret,</span><span class="w"> </span><span class="no">:val</span><span class="w"> </span><span class="s">"6"</span><span class="n">,</span><span class="w"> </span><span class="no">:ns</span><span class="w"> </span><span class="s">"user"</span><span class="n">,</span><span class="w"> </span><span class="no">:ms</span><span class="w"> </span><span class="mi">0</span><span class="n">,</span><span class="w"> </span><span class="no">:form</span><span class="w"> </span><span class="s">"(+ 1 2 3)"</span><span class="p">}</span></code></pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_nrepl"><a class="link" href="#_nrepl">nREPL</a></h4>
+<div class="paragraph">
+<p>To start an nREPL server:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ </span>bb <span class="nt">--nrepl-server</span> 1667</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Then connect with your favorite nREPL client:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">lein</span><span class="w"> </span><span class="n">repl</span><span class="w"> </span><span class="no">:connect</span><span class="w"> </span><span class="mi">1667</span><span class="w">
+</span><span class="n">Connecting</span><span class="w"> </span><span class="n">to</span><span class="w"> </span><span class="n">nREPL</span><span class="w"> </span><span class="n">at</span><span class="w"> </span><span class="mf">127.0</span><span class="n">.0.1</span><span class="no">:1667</span><span class="w">
+</span><span class="n">user=&gt;</span><span class="w"> </span><span class="p">(</span><span class="nb">+</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="mi">3</span><span class="p">)</span><span class="w">
+</span><span class="mi">6</span><span class="w">
+</span><span class="n">user=&gt;</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Editor plugins and tools known to work with the babashka nREPL server:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Emacs: <a href="https://docs.cider.mx/cider/platforms/babashka.html">CIDER</a></p>
+</li>
+<li>
+<p><code>lein repl :connect</code></p>
+</li>
+<li>
+<p>VSCode: <a href="http://calva.io/">Calva</a></p>
+</li>
+<li>
+<p>Atom: <a href="https://github.com/mauricioszabo/atom-chlorine">Chlorine</a></p>
+</li>
+<li>
+<p>(Neo)Vim: <a href="https://github.com/liquidz/vim-iced">vim-iced</a>,
+<a href="https://github.com/Olical/conjure">conjure</a>,
+<a href="https://github.com/tpope/vim-fireplace">fireplace</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>The babashka nREPL server does not write an <code>.nrepl-port</code> file at
+startup, but you can easily write a script that launches the server and
+writes the file:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
+
+</span><span class="p">(</span><span class="nb">import</span><span class="w"> </span><span class="p">[</span><span class="n">java.net</span><span class="w"> </span><span class="n">ServerSocket</span><span class="p">]</span><span class="w">
+        </span><span class="p">[</span><span class="n">java.io</span><span class="w"> </span><span class="n">File</span><span class="p">]</span><span class="w">
+        </span><span class="p">[</span><span class="n">java.lang</span><span class="w"> </span><span class="n">ProcessBuilder$Redirect</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.wait</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">wait</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="k">let</span><span class="w"> </span><span class="p">[</span><span class="n">nrepl-port</span><span class="w"> </span><span class="p">(</span><span class="nb">with-open</span><span class="w"> </span><span class="p">[</span><span class="n">sock</span><span class="w"> </span><span class="p">(</span><span class="nf">ServerSocket.</span><span class="w"> </span><span class="mi">0</span><span class="p">)]</span><span class="w"> </span><span class="p">(</span><span class="nf">.getLocalPort</span><span class="w"> </span><span class="n">sock</span><span class="p">))</span><span class="w">
+      </span><span class="n">cp</span><span class="w"> </span><span class="p">(</span><span class="nf">str/join</span><span class="w"> </span><span class="n">File/pathSeparatorChar</span><span class="w"> </span><span class="p">[</span><span class="s">"src"</span><span class="w"> </span><span class="s">"test"</span><span class="p">])</span><span class="w">
+      </span><span class="n">pb</span><span class="w"> </span><span class="p">(</span><span class="nb">doto</span><span class="w"> </span><span class="p">(</span><span class="nf">ProcessBuilder.</span><span class="w"> </span><span class="p">(</span><span class="nb">into</span><span class="w"> </span><span class="p">[</span><span class="s">"bb"</span><span class="w"> </span><span class="s">"--nrepl-server"</span><span class="w"> </span><span class="p">(</span><span class="nb">str</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
+                                       </span><span class="s">"--classpath"</span><span class="w"> </span><span class="n">cp</span><span class="p">]</span><span class="w">
+                                      </span><span class="n">*command-line-args*</span><span class="p">))</span><span class="w">
+           </span><span class="p">(</span><span class="nf">.redirectOutput</span><span class="w"> </span><span class="n">ProcessBuilder$Redirect/INHERIT</span><span class="p">))</span><span class="w">
+      </span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">.start</span><span class="w"> </span><span class="n">pb</span><span class="p">)]</span><span class="w">
+  </span><span class="p">(</span><span class="nf">wait/wait-for-port</span><span class="w"> </span><span class="s">"localhost"</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
+  </span><span class="p">(</span><span class="nf">spit</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="w"> </span><span class="n">nrepl-port</span><span class="p">)</span><span class="w">
+  </span><span class="p">(</span><span class="nf">.deleteOnExit</span><span class="w"> </span><span class="p">(</span><span class="nf">File.</span><span class="w"> </span><span class="s">".nrepl-port"</span><span class="p">))</span><span class="w">
+  </span><span class="p">(</span><span class="nf">.waitFor</span><span class="w"> </span><span class="n">proc</span><span class="p">))</span></code></pre>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_debugging_the_nrepl_server"><a class="link" href="#_debugging_the_nrepl_server">Debugging the nREPL server</a></h5>
+<div class="paragraph">
+<p>To debug the nREPL server from the binary you can run:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="shell"><span class="nv">$ BABASHKA_DEV</span><span class="o">=</span><span class="nb">true </span>bb <span class="nt">--nrepl-server</span> 1667</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This will print all the incoming messages.</p>
+</div>
+<div class="paragraph">
+<p>To debug the nREPL server from source:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">git</span><span class="w"> </span><span class="n">clone</span><span class="w"> </span><span class="n">https</span><span class="no">://github.com/borkdude/babashka</span><span class="w"> </span><span class="n">--recurse-submodules</span><span class="w">
+</span><span class="n">$</span><span class="w"> </span><span class="n">cd</span><span class="w"> </span><span class="n">babashka</span><span class="w">
+</span><span class="n">$</span><span class="w"> </span><span class="n">BABASHKA_DEV=true</span><span class="w"> </span><span class="n">clojure</span><span class="w"> </span><span class="n">-A</span><span class="no">:main</span><span class="w"> </span><span class="n">--nrepl-server</span><span class="w"> </span><span class="mi">1667</span></code></pre>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect2">
