--- a/master.html.html
+++ b/master.html.html
@@ -2051,8 +2051,26 @@ you want to compile babashka yourself.</p>
 <div class="sect3">
 <h4 id="babashka_classpath"><a class="link" href="#babashka_classpath">babashka.classpath</a></h4>
 <div class="paragraph">
-<p>Contains the function <code>add-classpath</code> which can be used to add to the
-classpath dynamically:</p>
+<p>Available functions:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>add-classpath</code></p>
+</li>
+<li>
+<p><code>get-classpath</code></p>
+</li>
+<li>
+<p><code>split-classpath</code></p>
+</li>
+</ul>
+</div>
+<div class="sect4">
+<h5 id="_add_classpath"><a class="link" href="#_add_classpath">add-classpath</a></h5>
+<div class="paragraph">
+<p>The function <code>add-classpath</code> which can be used to add to the classpath
+dynamically:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2066,6 +2084,21 @@ classpath dynamically:</p>
 </span><span class="p">(</span><span class="nf">add-classpath</span><span class="w"> </span><span class="n">cp</span><span class="p">)</span><span class="w">
 </span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">medley.core</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">m</span><span class="p">])</span><span class="w">
 </span><span class="p">(</span><span class="nf">m/index-by</span><span class="w"> </span><span class="no">:id</span><span class="w"> </span><span class="p">[{</span><span class="no">:id</span><span class="w"> </span><span class="mi">1</span><span class="p">}</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">2</span><span class="p">}])</span><span class="w"> </span><span class="c1">;;=&gt; {1 {:id 1}, 2 {:id 2}}</span></code></pre>
+</div>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_get_classpath"><a class="link" href="#_get_classpath">get-classpath</a></h5>
+<div class="paragraph">
+<p>The function <code>get-classpath</code> returns the classpath as set by <code>--classpath</code>,
+<code>BABASHKA_CLASSPATH</code> and <code>add-classpath</code>.</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_split_classpath"><a class="link" href="#_split_classpath">split-classpath</a></h5>
+<div class="paragraph">
+<p>Given a classpath, returns a seq of strings as the result of splitting the
+classpath by the platform specific path separatator.</p>
 </div>
 </div>
 </div>
