--- a/master.html
+++ b/master.html
@@ -2103,6 +2103,57 @@ classpath by the platform specific path separatator.</p>
 </div>
 </div>
 <div class="sect3">
+<h4 id="babashkadeps"><a class="link" href="#babashkadeps">babashka.deps</a></h4>
+<div class="paragraph">
+<p>Available functions:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>add-deps</code></p>
+</li>
+<li>
+<p><code>clojure</code></p>
+</li>
+<li>
+<p><code>merge-deps</code></p>
+</li>
+</ul>
+</div>
+<div class="sect4">
+<h5 id="_add_deps"><a class="link" href="#_add_deps">add-deps</a></h5>
+<div class="paragraph">
+<p>The function <code>add-deps</code> takes a deps edn map like <code>{:deps {medley/medley {:mvn/version "1.3.0"}}}</code>, resolves it using [deps.clj](<a href="https://github.com/borkdude/deps.clj" class="bare">https://github.com/borkdude/deps.clj</a>) and then adds to the babashka classpath accordingly.</p>
+</div>
+<div class="paragraph">
+<p>Example:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.deps</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">deps</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">deps/add-deps</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}})</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">medley.core</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">m</span><span class="p">])</span><span class="w">
+</span><span class="p">(</span><span class="nf">m/index-by</span><span class="w"> </span><span class="no">:id</span><span class="w"> </span><span class="p">[{</span><span class="no">:id</span><span class="w"> </span><span class="mi">1</span><span class="p">}</span><span class="w"> </span><span class="p">{</span><span class="no">:id</span><span class="w"> </span><span class="mi">2</span><span class="p">}])</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Optionally, <code>add-deps</code> takes a second arg with options. Currently the only
+option is <code>:aliases</code> which will affect how deps are resolved:</p>
+</div>
+<div class="paragraph">
+<p>Example:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">deps/add-deps</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:aliases</span><span class="w"> </span><span class="p">{</span><span class="no">:medley</span><span class="w"> </span><span class="p">{</span><span class="no">:extra-deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}}}}</span><span class="w">
+               </span><span class="p">{</span><span class="no">:aliases</span><span class="w"> </span><span class="p">[</span><span class="no">:medley</span><span class="p">]})</span></code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect3">
 <h4 id="babashkawait"><a class="link" href="#babashkawait">babashka.wait</a></h4>
 <div class="paragraph">
 <p>Contains the functions: <code>wait-for-port</code> and <code>wait-for-path</code>.</p>
