--- a/master.html
+++ b/master.html
@@ -2123,7 +2123,10 @@ classpath by the platform specific path separatator.</p>
 <div class="sect4">
 <h5 id="_add_deps"><a class="link" href="#_add_deps">add-deps</a></h5>
 <div class="paragraph">
-<p>The function <code>add-deps</code> takes a deps edn map like <code>{:deps {medley/medley {:mvn/version "1.3.0"}}}</code>, resolves it using [deps.clj](<a href="https://github.com/borkdude/deps.clj" class="bare">https://github.com/borkdude/deps.clj</a>) and then adds to the babashka classpath accordingly.</p>
+<p>The function <code>add-deps</code> takes a deps edn map like <code>{:deps {medley/medley
+{:mvn/version "1.3.0"}}}</code>, resolves it using
+<a href="https://github.com/borkdude/deps.clj">deps.clj</a> and then adds to the babashka
+classpath accordingly.</p>
 </div>
 <div class="paragraph">
 <p>Example:</p>
@@ -2149,6 +2152,43 @@ option is <code>:aliases</code> which will affect how deps are resolved:</p>
 <div class="content">
 <pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">deps/add-deps</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:aliases</span><span class="w"> </span><span class="p">{</span><span class="no">:medley</span><span class="w"> </span><span class="p">{</span><span class="no">:extra-deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}}}}</span><span class="w">
                </span><span class="p">{</span><span class="no">:aliases</span><span class="w"> </span><span class="p">[</span><span class="no">:medley</span><span class="p">]})</span></code></pre>
+</div>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_clojure"><a class="link" href="#_clojure">clojure</a></h5>
+<div class="paragraph">
+<p>The function <code>clojure</code> takes a sequential collection of arguments, similar to
+the clojure CLI. The arguments are then passed to
+[deps.clj](<a href="https://github.com/borkdude/deps.clj" class="bare">https://github.com/borkdude/deps.clj</a>). The <code>clojure</code> function returns
+<code>nil</code> and prints to <code>*out*</code> for commands like <code>-Stree</code>, and <code>-Spath</code>. For <code>-M</code>,
+<code>-X</code> and <code>-A</code> it invokes <code>java</code> with <code>babashka.process/process</code> (see
+<a href="#babashkaprocess">babashka.process</a>) and returns the associated record. For
+more details, read the docstring with:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">clojure.repl</span><span class="w"> </span><span class="no">:refer</span><span class="w"> </span><span class="p">[</span><span class="nb">doc</span><span class="p">]])</span><span class="w">
+</span><span class="p">(</span><span class="nb">doc</span><span class="w"> </span><span class="n">babashka.deps/clojure</span><span class="p">)</span></code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Example:</p>
+</div>
+<div class="paragraph">
+<p>The following script passes through command line arguments to clojure, while
+adding the medley dependency:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.deps</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">deps</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">deps</span><span class="w"> </span><span class="o">'</span><span class="p">{</span><span class="no">:deps</span><span class="w"> </span><span class="p">{</span><span class="n">medley/medley</span><span class="w"> </span><span class="p">{</span><span class="no">:mvn/version</span><span class="w"> </span><span class="s">"1.3.0"</span><span class="p">}}})</span><span class="w">
+</span><span class="p">(</span><span class="k">def</span><span class="w"> </span><span class="n">clojure-args</span><span class="w"> </span><span class="p">(</span><span class="nb">list*</span><span class="w"> </span><span class="s">"-Sdeps"</span><span class="w"> </span><span class="n">deps</span><span class="w">  </span><span class="n">*command-line-args*</span><span class="p">))</span><span class="w">
+
+</span><span class="p">(</span><span class="nb">if-let</span><span class="w"> </span><span class="p">[</span><span class="n">proc</span><span class="w"> </span><span class="p">(</span><span class="nf">deps/clojure</span><span class="w"> </span><span class="n">clojure-args</span><span class="p">)]</span><span class="w">
+  </span><span class="p">(</span><span class="nb">-&gt;</span><span class="w"> </span><span class="o">@</span><span class="n">proc</span><span class="w"> </span><span class="no">:exit</span><span class="w"> </span><span class="p">(</span><span class="nf">System/exit</span><span class="p">))</span><span class="w">
+  </span><span class="p">(</span><span class="nf">System/exit</span><span class="w"> </span><span class="mi">0</span><span class="p">))</span></code></pre>
 </div>
 </div>
 </div>
