--- a/master.html
+++ b/master.html
@@ -2160,7 +2160,7 @@ option is <code>:aliases</code> which will affect how deps are resolved:</p>
 <div class="paragraph">
 <p>The function <code>clojure</code> takes a sequential collection of arguments, similar to
 the clojure CLI. The arguments are then passed to
-[deps.clj](<a href="https://github.com/borkdude/deps.clj" class="bare">https://github.com/borkdude/deps.clj</a>). The <code>clojure</code> function returns
+<a href="https://github.com/borkdude/deps.clj">deps.clj</a>. The <code>clojure</code> function returns
 <code>nil</code> and prints to <code>*out*</code> for commands like <code>-Stree</code>, and <code>-Spath</code>. For <code>-M</code>,
 <code>-X</code> and <code>-A</code> it invokes <code>java</code> with <code>babashka.process/process</code> (see
 <a href="#babashkaprocess">babashka.process</a>) and returns the associated record. For
